qr-scanner/force-app/main/default/objects/QR_order__c/QR_order__c.object-meta.xml
<CustomObject>
    <label>QR order</label>
    <nameField>
        <label>QR order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QR orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>