qr-scanner/force-app/main/default/objects/QR_order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>QR orders</relationshipLabel>
    <relationshipName>QR_orders</relationshipName>
    <type>Lookup</type>
</CustomField>