qr-scanner/force-app/main/default/objects/QR_order__c/fields/ProfileStatus__c.field-meta.xml
<CustomField>
    <fullName>ProfileStatus__c</fullName>
    <label>ProfileStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>