qr-scanner/force-app/main/default/objects/QR_order__c/fields/Risk_of_Churn__c.field-meta.xml
<CustomField>
    <fullName>Risk_of_Churn__c</fullName>
    <label>Risk of Churn</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>